[package]
name = "luki_os"
version = "0.1.0"
edition = "2021"

[dependencies]
volatile = "0.2.6"
bootloader = {version = "0.9", features = ["map_physical_memory"]}
lazy_static = {version = "1.0", features = ["spin_no_std"]}
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"

[[test]]
name = "should_panic"
harness = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "luki_os"
test = true
bench = false

[package.metadata.bootimage]
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
  "-serial", "stdio", 
  "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300          


[[test]]
name = "stack_overflow"
harness = false
